# cs-bot

./: .gitignore  README.md  api_reference.md  lint.sh  pyproject.toml
ci/pylint/: .pylintrc
cs_bot/: __init__.py  adapter.py  api_common.py  core.py  helper.py  log.py  metrics.py  permissions.py  plugin.py  protocol.py  role.py  rule.py  scheduler.py  session.py  store.py  typing.py
cs_bot/adapters/shopee_imbot/: __init__.py
cs_bot/adapters/sop_bot/: __init__.py  events.py
cs_bot/configs/: startup_config.py
cs_bot/hooks/: bot_lifecycle.py  matcher.py
cs_bot/libs/seatalk_openapi/: client.py
cs_bot/libs/seatalk_webhook/: client.py
cs_bot/models/: config.py  database.py
plugins/: another_plugin.py  echo.py
